fixed article header spacing for articles that contain media attachments. fixed meta not showing up for articles with only one tag.

--- a/wp-content/themes/fusepilot/compass/sass/style.sass
+++ b/wp-content/themes/fusepilot/compass/sass/style.sass
@@ -379,8 +379,10 @@ form
         text-transform: none
 
     &.single
-      header
-        padding-top: 70px
+      
+      article:not(.has_media)
+        header
+          padding-top: 70px
 
     &.index, &.archive
       h2.header
